--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,73 @@
-aiohttp==3.9.1
+aiohttp==3.9.3
 aiosignal==1.3.1
 altair==5.2.0
 annotated-types==0.6.0
-anyio==3.7.1
+anyio==4.3.0
 async-timeout==4.0.3
-attrs==23.1.0
+attrs==23.2.0
 blinker==1.7.0
-boto3==1.33.7
-botocore==1.33.7
-cachetools==5.3.2
-certifi==2023.11.17
+boto3==1.34.59
+botocore==1.34.59
+cachetools==5.3.3
+certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
-dataclasses-json==0.6.3
+dataclasses-json==0.6.4
 exceptiongroup==1.2.0
-frozenlist==1.4.0
+frozenlist==1.4.1
 gitdb==4.0.11
-GitPython==3.1.40
+GitPython==3.1.42
 idna==3.6
-importlib-metadata==6.11.0
-Jinja2==3.1.2
+Jinja2==3.1.3
 jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==2.4
-jsonschema==4.20.0
-jsonschema-specifications==2023.11.2
-langchain==0.0.345
-langchain-core==0.0.9
-langsmith==0.0.69
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+langchain==0.1.11
+langchain-community==0.0.27
+langchain-core==0.1.30
+langchain-text-splitters==0.0.1
+langsmith==0.1.23
 markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-marshmallow==3.20.1
+MarkupSafe==2.1.5
+marshmallow==3.21.1
 mdurl==0.1.2
-multidict==6.0.4
+multidict==6.0.5
 mypy-extensions==1.0.0
-numpy==1.26.2
+numpy==1.26.4
+orjson==3.9.15
 packaging==23.2
-pandas==2.1.3
-Pillow==10.1.0
-protobuf==4.25.1
-pyarrow==14.0.1
-pydantic==2.5.2
-pydantic_core==2.14.5
+pandas==2.2.1
+pillow==10.2.0
+protobuf==4.25.3
+pyarrow==15.0.1
+pydantic==2.6.3
+pydantic_core==2.16.3
 pydeck==0.8.1b0
 Pygments==2.17.2
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
 pytube==15.0.0
-pytz==2023.3.post1
+pytz==2024.1
 PyYAML==6.0.1
-referencing==0.31.1
+referencing==0.33.0
 requests==2.31.0
-rich==13.7.0
-rpds-py==0.13.2
-s3transfer==0.8.2
+rich==13.7.1
+rpds-py==0.18.0
+s3transfer==0.10.0
 six==1.16.0
 smmap==5.0.1
-sniffio==1.3.0
-SQLAlchemy==2.0.23
-streamlit==1.29.0
+sniffio==1.3.1
+SQLAlchemy==2.0.28
+streamlit==1.32.0
 streamlit-chat==0.1.1
 tenacity==8.2.3
 toml==0.10.2
-toolz==0.12.0
+toolz==0.12.1
 tornado==6.4
 typing-inspect==0.9.0
-typing_extensions==4.8.0
-tzdata==2023.3
-tzlocal==5.2
+typing_extensions==4.10.0
+tzdata==2024.1
 urllib3==2.0.7
-validators==0.22.0
-yarl==1.9.3
-youtube-transcript-api==0.6.1
-zipp==3.17.0
+yarl==1.9.4
+youtube-transcript-api==0.6.2
